--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 
 @font-face {
 
-    font-family: Typography Bold;
+    font-family: TypographyBold;
     src: url("../fonts/Typography Times Bold.ttf");
 
 }
@@ -44,4 +44,16 @@ body {
 #memberSignUp
 {
     overflow: hidden;
+}
+
+.display-2
+{
+    font-family: TypographyBold;
+
+    font-size: 40px;
+}
+
+.display-3, .display-4
+{
+    font-size: 20px;
 }
